[styling][xs]: overflow issue fixed organization page

--- a/ckanext/oknp/fanstatic/css/less/organization.less
+++ b/ckanext/oknp/fanstatic/css/less/organization.less
@@ -1,3 +1,7 @@
+.organization-media { 
+  height: unset !important;
+}
+
 .organization {
   background: #f7f7f7;
   margin-bottom: 10px;
